# orchids-app-challenge

./: .gitignore  DOCUMENTATION.md  README.md
backend/: env.example  pyproject.toml  screenshot.py  setup.py
backend/app/: llm.py  main.py  screenshot.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
